add program info

--- a/program/index.html
+++ b/program/index.html
@@ -45,7 +45,138 @@
         </tr>
     </table>
 
-    
+    <table border="1" cellspacing="0" cellpadding="0">
+    <tbody>
+        <tr>
+            <td width="623" valign="top">
+                <p>
+                    <strong>Opening remarks</strong> <strong></strong>
+                </p>
+                <p>
+                    1pm - 1:15pm
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td width="623" valign="top">
+                <p>
+                    <strong>
+                        Opening keynote: From RF-based Sensing to RF Computing - Unremitting Exploration about RF Signals
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>Yuan He, Tsinghua University</em> <em></em>
+                </p>
+                <p>
+                    1:15pm - 2:15pm
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td width="623" valign="top">
+                <p>
+                    <strong>Technical Session</strong> <strong></strong>
+                </p>
+                <p>
+                    2:30 - 3:45pm
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td width="623" valign="top">
+                <p>
+                    <strong>
+                        TDoA Positioning with Data-Driven LoS Inference in
+                        mmWave MIMO Communications
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>
+                        Mengxin Huang (Southeast University), Fan Meng (Purple
+                        Mountain Laboratories) , Shengheng Liu (Southeast
+                        University, Purple Mountain Laboratories), Cheng Zhang
+                        (Southeast University, Purple Mountain Laboratories),
+                        Yongming Huang (Southeast University, Purple Mountain
+                        Laboratories), Zhaohua Lu (ZTE Corporation)
+                    </em>
+                    <em></em>
+                </p>
+                <p>
+                    <strong>
+                        MARS: A mmWave Rotating Synthetic Aperture Radar System
+                        for Indoor Imaging
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>
+                        Wei Zhao (McMaster University), Rong Zheng (McMaster
+                        University)
+                    </em>
+                    <em></em>
+                </p>
+                <p>
+                    <strong>
+                        (Short paper) An Experimental Prototype for Multistatic
+                        Asynchronous ISAC
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>
+                        Marco Canil (University of Padova), Jacopo Pegoraro
+                        (University of Padova), Jesus O. Lacruz (IMDEA Networks
+                        Institute), Marco Mezzavilla (New York University),
+                        Michele Rossi (University of Padova), Joerg Widmer
+                        (IMDEA Networks Institute), Sundeep Rangan (New York
+                        University)
+                    </em>
+                    <em></em>
+                </p>
+                <p>
+                    <em></em>
+                </p>
+                <p>
+                    <strong>
+                        (Short paper) Enabling User Identification for
+                        mmWave-based Gesture Recognition Systems
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>
+                        Lilin Xu (Zhejiang University), Keyi Wang (University of
+                        California, San Diego), Chaojie Gu (Zhejiang
+                        University), Shibo He (Zhejiang University), Jiming Chen
+                        (Zhejiang University)
+                    </em>
+                    <em></em>
+                </p>
+            </td>
+        </tr>
+        <tr>
+            <td width="623" valign="top">
+                <p>
+                    <strong>
+                        Closing keynote: AI Guardians - Harnessing the Power of
+                        Radar Technology for Enhanced Health Monitoring in
+                        Geriatric Care
+                    </strong>
+                    <strong></strong>
+                </p>
+                <p>
+                    <em>George Shaker, University of Waterloo</em> <em></em>
+                </p>
+                <p>
+                    4:00 - 5:00pm
+                </p>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
 
     <table class="footer">
         <tr>
