Update program, registration info

--- a/program/index.html
+++ b/program/index.html
@@ -34,7 +34,7 @@
                 <a class="current" title="Organization" href="organization">Organization</a>
             </td>
             <td class="navigation">
-               <a class="current" title="Register for the Conference" href="https://www.mcmaster.ca/" target="_blank">Registration</a>
+               <a class="current" title="Register for the Conference" href="https://sensys.acm.org/2023/registration/" target="_blank">Registration</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Conference Program" href="program">Program</a>
@@ -48,7 +48,7 @@
     <table border="1" cellspacing="0" cellpadding="0">
     <tbody>
         <tr>
-            <td width="623" valign="top">
+            <td bgcolor=33B2FF width="623" valign="top">
                 <p>
                     <strong>Opening remarks</strong> <strong></strong>
                 </p>
@@ -58,10 +58,10 @@
             </td>
         </tr>
         <tr>
-            <td width="623" valign="top">
+            <td bgcolor=D5DBDB width="623" valign="top">
                 <p>
                     <strong>
-                        Opening keynote: From RF-based Sensing to RF Computing - Unremitting Exploration about RF Signals
+                        Opening keynote: <a href="program/keynote.html#keynote1">From RF-based Sensing to RF Computing - Unremitting Exploration about RF Signals</a>
                     </strong>
                     <strong></strong>
                 </p>
@@ -74,7 +74,7 @@
             </td>
         </tr>
         <tr>
-            <td width="623" valign="top">
+            <td bgcolor=33B2FF width="623" valign="top">
                 <p>
                     <strong>Technical Session</strong> <strong></strong>
                 </p>
@@ -84,7 +84,7 @@
             </td>
         </tr>
         <tr>
-            <td width="623" valign="top">
+            <td bgcolor=D5DBDB width="623" valign="top">
                 <p>
                     <strong>
                         TDoA Positioning with Data-Driven LoS Inference in
@@ -157,12 +157,12 @@
             </td>
         </tr>
         <tr>
-            <td width="623" valign="top">
+            <td bgcolor=33B2FF width="623" valign="top">
                 <p>
                     <strong>
-                        Closing keynote: AI Guardians - Harnessing the Power of
+                        Closing keynote: <a href="program/keynote.html#keynote2"> AI Guardians - Harnessing the Power of
                         Radar Technology for Enhanced Health Monitoring in
-                        Geriatric Care
+                        Geriatric Care</a>
                     </strong>
                     <strong></strong>
                 </p>
