--- a/program/keynote.html
+++ b/program/keynote.html
@@ -46,7 +46,7 @@
     </table>
 
     <table border="1" cellspacing="0" cellpadding="0">
-
+<tbody>
 <a id="keynote1">
 <p style="font-weight: 400;"><strong>Keynote 1: From RF-based Sensing to RF Computing &ndash; Unremitting Exploration about RF Signals</strong></p>
 <p style="font-weight: 400;"><u>Abstract: </u></p>
@@ -74,6 +74,7 @@
 <p>Dr. George Shaker (Senior Member, IEEE) is an adjunct associate professor at the Department of Electrical and Computer Engineering at the University of Waterloo, Canada, where he is the director of the Wireless Sensors & Devices Lab. He is also a research scientist at the UW-Schlegel Research Institute for Aging where he is the founder and director of “THE MIRADA - Technology for Health Empowerment: Monitoring, Intervention, and Response for Aging Demonstration Apartment”. He has been the Principal Scientist and Head of Research & Technology at Spark Technology Labs (STL) since its founding in 2011. Prior to his current roles, he was with Research in Motion (BlackBerry) and Georgia Institute of Technology. Dr. Shaker has authored/coauthored more than 150 publications and has more than 35 patents/patent applications (11 of which are assigned to Google) in the broad area of applied electromagnetics. He has received multiple recognitions and awards, including the IEEE Antennas and Propagation Society (AP-S) Best Paper Award, the IEEE AP-S Honorable Mention Best Paper Award (four times to date), the IEEE Antennas and Propagation Graduate Research Award, the IEEE Microwave Theory and Technology Society (MTT-S) Graduate Fellowship, the Electronic Components and Technology Best of Session Paper Award, and the IEEE Sensors Most Popular Paper Award. He coauthored two papers in IEEE journals that were among the top 25 downloaded papers on IEEEXplore for several consecutive months. He also co-authored a paper that was the top accessed article in Wiley Engineering Reports in 2022. He was the supervisor of the 5-members student team winning the Third Best Design Contest at IEEE AP-S 2016, the co-author of the Association for Computing Machinery (ACM) MobileHCI 2017 Best Workshop Paper Award, and the 2018 Computer Vision Conference Imaging Best Paper Award. He co-received with his students’ several research recognitions, including the Natural Sciences and Engineering Research Council of Canada (NSERC) Top Science Research Award in 2019, the IEEE APS HM Paper Award in 2019, the Biotec Top Demo Award in 2019, the arXiv Top Downloaded Paper (medical device category) in 2019, the Velocity Fund in 2020, the National Aeronautics and Space Administration (NASA) Tech Briefs HM Award (medical device category) in 2020, the University of Waterloo (UW) Concept Winner in 2021, the U.K. Dragons Canadian Competition Winner in 2021, the Canadian Microelectronics Corporation (CMC) Nano Winner in 2021, the COIL CoLab Award in 2022, and the 2023 Canadian Space Agency Satellite Competition (90+ student members).</p>
 <p><u>&nbsp;</u></p>
 </td>
+</tbody>
 </table>
 
 </div>
