--- a/program/keynote.html
+++ b/program/keynote.html
@@ -54,7 +54,7 @@
 <p style="font-weight: 400;"><u>Bio: </u></p>
 <div class="square"> 
     <div>
-        <img src="program/He.jpg" alt="Yuan He" style="width:170px">
+        <img margin=10px align=left src="program/He.jpg" alt="Yuan He" style="width:170px">
     </div>
     <p>Yuan He is a tenured associate professor at the School of Software, Tsinghua University. He received his Ph.D. degree in the Department of Computer Science and Engineering, Hong Kong University of Science and Technology, his M.E. degree in Institute of Software, Chinese Academy of Sciences, and his B.E. degree in the Department of Computer Science and Technology, University of Science and Technology of China. Yuan He&rsquo;s research interests include Internet of Things, wireless networks and communication, mobile and ubiquitous computing. He serves on the editorial board of journals like ACM TIOT, IEEE IoT Journal, and JCST. He has been a TPC Co-Chair of conferences like IEEE SECON 2022, EWSN 2019, and DCOSS 2018, and continuously served on the TPC of conferences like ACM SenSys, IEEE/ACM IPSN, and IEEE INFOCOM, etc. He has published more than 150 papers on prestigious conferences and journals and have received 5 best paper awards.</p>
 </div>
