changed margin, color

--- a/program/index.html
+++ b/program/index.html
@@ -48,7 +48,7 @@
     <table border="1" cellspacing="0" cellpadding="0">
     <tbody>
         <tr>
-            <td bgcolor=33B2FF width="623" valign="top">
+            <td bgcolor=85C1E9 width="623" valign="top">
                 <p>
                     <strong>Opening remarks</strong> <strong></strong>
                 </p>
@@ -63,9 +63,7 @@
                     <strong>
                         Opening keynote: <a href="program/keynote.html#keynote1">From RF-based Sensing to RF Computing - Unremitting Exploration about RF Signals</a>
                     </strong>
-                    <strong></strong>
-                </p>
-                <p>
+		</br>
                     <em>Yuan He, Tsinghua University</em> <em></em>
                 </p>
                 <p>
@@ -74,7 +72,7 @@
             </td>
         </tr>
         <tr>
-            <td bgcolor=33B2FF width="623" valign="top">
+            <td bgcolor=85C1E9 width="623" valign="top">
                 <p>
                     <strong>Technical Session</strong> <strong></strong>
                 </p>
@@ -90,9 +88,7 @@
                         TDoA Positioning with Data-Driven LoS Inference in
                         mmWave MIMO Communications
                     </strong>
-                    <strong></strong>
-                </p>
-                <p>
+                </br>
                     <em>
                         Mengxin Huang (Southeast University), Fan Meng (Purple
                         Mountain Laboratories) , Shengheng Liu (Southeast
@@ -108,9 +104,7 @@
                         MARS: A mmWave Rotating Synthetic Aperture Radar System
                         for Indoor Imaging
                     </strong>
-                    <strong></strong>
-                </p>
-                <p>
+                </br>
                     <em>
                         Wei Zhao (McMaster University), Rong Zheng (McMaster
                         University)
@@ -122,9 +116,7 @@
                         (Short paper) An Experimental Prototype for Multistatic
                         Asynchronous ISAC
                     </strong>
-                    <strong></strong>
-                </p>
-                <p>
+                </br>
                     <em>
                         Marco Canil (University of Padova), Jacopo Pegoraro
                         (University of Padova), Jesus O. Lacruz (IMDEA Networks
@@ -144,8 +136,7 @@
                         mmWave-based Gesture Recognition Systems
                     </strong>
                     <strong></strong>
-                </p>
-                <p>
+                </br>
                     <em>
                         Lilin Xu (Zhejiang University), Keyi Wang (University of
                         California, San Diego), Chaojie Gu (Zhejiang
@@ -157,7 +148,7 @@
             </td>
         </tr>
         <tr>
-            <td bgcolor=33B2FF width="623" valign="top">
+            <td bgcolor=85C1E9 width="623" valign="top">
                 <p>
                     <strong>
                         Closing keynote: <a href="program/keynote.html#keynote2"> AI Guardians - Harnessing the Power of
@@ -165,8 +156,7 @@
                         Geriatric Care</a>
                     </strong>
                     <strong></strong>
-                </p>
-                <p>
+                </br>
                     <em>George Shaker, University of Waterloo</em> <em></em>
                 </p>
                 <p>
