--- a/organization/index.html
+++ b/organization/index.html
@@ -10,7 +10,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>The First ACM Workshop on mmWave Sensing Systems and Applications (mmSensys)</title>
+    <title>The First ACM Workshop on mmWave Sensing Systems and Applications (mmWaveSys)</title>
 </head>
 
 <body>
@@ -18,10 +18,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">ACM</span><span class="title2"> mmSensys</span> <span class="year"> 2023</span>
+            <span class="title1">ACM</span><span class="title2"> mmWaveSys</span> <span class="year"> 2023</span>
         </div>
         <div class="bottom-right">
-            The First ACM Workshop on mmWave Sensing Systems and Applications <br> <br> November 12, 2023 <br> Hamilton, Canada
+            The First ACM Workshop on mmWave Sensing Systems and Applications <br> <br> November 12, 2023 <br> İstanbul, Türkiye
         </div>
     </div>
 
@@ -34,7 +34,7 @@
                 <a class="current" title="Organization" href="organization">Organization</a>
             </td>
             <td class="navigation">
-               <a class="current" title="Register for the Conference" href="https://www.mcmaster.ca/" target="_blank">Registration</a>
+               <a class="current" title="Register for the Conference" href="https://sensys.acm.org/2023/registration/" target="_blank">Registration</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Conference Program" href="program">Program</a>
@@ -45,15 +45,63 @@
         </tr>
     </table>
 
-    
+    <h2> - Technical Program Committee Chairs - </h2>
+    <p>
+        <ul>
+        <li>Arash Asadi, TU Darmstadt, Germany</li>
+        <li>Jun Luo, Nanyang Technological University, Singapore</li>
+        <li>Rong Zheng, McMaster University, Canada</li>
+        </ul>
+    </p>
+
+    <h2> - Web Chair - </h2>
+    <p>
+        <ul>
+        <li>Wei Zhao, McMaster University, Canada</li>
+        </ul>
+    </p>
+
+    <h2> - Publicity Chair - </h2>
+    <p>
+        <ul>
+        <li>Yang Miao, University of Twente, Netherland</li>
+        <li>Placido Mursia,  NEC Laboratories Europe GmbH, Germany</li>
+        </ul>
+    </p>
+
+    <h2> - Technical Program Committee Members - </h2>
+    <p>
+        <ul>
+            <li>Chong Han, Shanghai Jiao Tong University, China</li>
+            <li>Dimitrios Koutsonikolas, Northeastern University, United States of America</li>
+            <li>Fan Liu, Southern University of Science and Technology, China</li>
+            <li>Fan Ye, Stony Brook University, United States of America</li>
+            <li>Fusang Zhang, Institute of Software, Chinese Academy of Sciences; University of Chinese Academy of Sciences, China</li>
+            <li>George Shaker, University of Waterloo, Canada</li>
+            <li>Jacopo Pegoraro, University of Padova, Italy</li>
+            <li>Jesus O., Lacruz, IMDEA Networks Institute, Spain</li>
+            <li>Lu Su, Purdue University, United States of America</li>
+            <li>Luca Venturino, University of Cassino, Italy</li>
+            <li>Marco Mezzavilla, New York University, United States of America</li>
+            <li>Mengxin Huang, Southeast University, China</li>
+            <li>Michele Rossi, University of Padova, Italy</li>
+            <li>Nada Golmie, National institute of standards and technology, United States of America</li>
+            <li>Paolo Casari, University of Trento, Italy</li>
+            <li>Qing Wang, Delft University of Technology, Netherlands</li>
+            <li>Sanjib Sur, University of South Carolina, United States of America</li>
+            <li>Silvio Mandelli, Nokia bell labs, Germany</li>
+            <li>Sofie Pollin, KU Leuven, Belgium</li>
+            <li>Traian Emanuel, Abrudan	Nokia Bell Labs, Espoo, Finland</li>
+            <li>Yang Miao, University of Twente, Netherland</li>
+        </ul>
+    </p>
 
     <table class="footer">
         <tr>
             <td class="footer">Made from the template design by <a target="_blank" href="http://math.ucr.edu/~mpierce/">Mike Pierce</a></td>
-            <td class="footer">&copy; mmSensys 2023</td>
+            <td class="footer">&copy; mmWaveSys 2023</td>
         </tr>
     </table>
 </div>
 </body>
 </html>
-
