--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="current" title="Organization" href="organization">Organization</a>
             </td>
             <td class="navigation">
-               <a class="current" title="Register for the Conference" href="https://www.mcmaster.ca/" target="_blank">Registration</a>
+               <a class="current" title="Register for the Conference" href="https://sensys.acm.org/2023/registration/" target="_blank">Registration</a>
             </td>
             <td class="navigation">
                 <a class="current" title="Conference Program" href="program">Program</a>
