--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2> - Workshop Venue - </h2>
     <p>
         The workshop will be help in the 3rd floor of <a href="https://maps.app.goo.gl/E7x1iHqoFNB4p73X7">building D,</a> next to the conference hall 
-        <a href="https://maps.app.goo.gl/ErjWbWPNQ2WxdMRa9">Fazil Say</a>.
+        <a href="https://maps.app.goo.gl/ErjWbWPNQ2WxdMRa9">Fazil Say</a> in Bahcesehir University.
     </p>
 
     <h2> - Call for Papers - </h2>
